Angular and CLI update to 7, library like project

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bd2NgxHboxplot</title>
+  <title>Bd2NgxHboxplotApp</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <bd2-ngx-root>Loading...</bd2-ngx-root>
+  <bd2-root></bd2-root>
 </body>
 </html>
