--- a/projects/bd2-ngx-hboxplot-demo/src/index.html
+++ b/projects/bd2-ngx-hboxplot-demo/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bd2NgxHboxplotApp</title>
+  <title>Bd2NgxHboxplotDemo</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <bd2-root></bd2-root>
+  <app-root></app-root>
 </body>
 </html>
